--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,10 @@
 @import "./header.scss";
 @import "./footer.scss";
+
+:root{
+    box-sizing: border-box;
+}
+*{
+    margin:0;
+    padding: 0;
+}
