--- a/src/header.scss
+++ b/src/header.scss
@@ -1,3 +1,16 @@
-footer.job-footer{
-    
+div.job-sidebar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 30vw;
 }
+div.job-sidebar > div{
+    display: block;
+    padding: 2%;
+}
+@media screen and (min-width: 600px) {
+    div.job-sidebar{
+        width: 20vw;
+    }
+}   
