--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@import "./header.scss";
+@import "./sidebar.scss";
 @import "./footer.scss";
-
+@import "./content.scss";
 :root{
     box-sizing: border-box;
 }
@@ -8,3 +8,17 @@
     margin:0;
     padding: 0;
 }
+
+body{
+    display: grid;
+    grid-template-columns:30% 1fr  ;
+    grid-template-rows: 1fr 10%;
+    grid-template-areas: 
+    "sidebar content"
+    "sidebar footer";
+}
+@media screen and (min-width: 600px) {
+    body{
+        grid-template-columns:20% 1fr  ;
+    }
+}   
