finished Jobs.html for now

--- a/src/sidebar.scss
+++ b/src/sidebar.scss
@@ -8,8 +8,7 @@ div.job-sidebar > div{
     padding: 2%;
 }
 div.img-logo{
-    background-image: url(./img/logo.svg);
-    border: none;
+    background-image: url("./img/logo.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
