added search functionality

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -10,3 +10,12 @@ div.home-container > div.img-logo{
     height: 40vh;
     
 }
+#home .ui-icon { 
+    background:  url("./img/logo.svg") 50% 50% no-repeat; 
+    }
+    #home .ui-icon:active { 
+    background:  url("./img/logo.svg") 50% 50% no-repeat; 
+    }
+    #home .ui-icon:hover { 
+    background:  url("./img/logo.svg") 50% 50% no-repeat; 
+    }
