--- a/src/Job/Job.scss
+++ b/src/Job/Job.scss
@@ -4,3 +4,62 @@ form#formJob{
     align-items: center;
     flex-direction: column;
 }
+div.close.dark-bg{
+    position: fixed;
+    z-index: 10;
+    top:0;
+    left: 0;
+    background-color: rgba(17, 17, 17, 0.698);
+    width: 100%;
+    height: 100%;
+
+}
+div.widget-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+div.widget{
+    position: fixed;
+    width: 50%;
+    height: 90%;
+    z-index: 11;
+    background-color: rgb(65, 65, 65);
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+.applicantTable{
+    overflow-x: scroll;
+    overflow-y:scroll;
+}
+div.widget > *{
+    background-color: white;
+    width: 80%;
+    text-align: center;
+}
+
+.Jobs-wrapper{
+    display: block;
+    position: static;
+    background-color: white;
+    overflow-y: scroll;
+    margin-bottom:2%;
+    border-radius: 5%;
+}
+.dropdown-item{
+    border:2px solid black;
+}
+.dropdown-item-menu{
+    margin-bottom:2%;
+}
+.widget{
+    background-color: white;
+}
