--- a/src/sidebar.scss
+++ b/src/sidebar.scss
@@ -1,6 +1,7 @@
 div.job-sidebar{
+    position: fixed;
     grid-area: sidebar;
-    height: 100vh;
+    height: 100%;
     width: 30vw;
 }
 div.job-sidebar > div{
@@ -23,3 +24,8 @@ div.job-sidebar > div.img-logo{
         width: 20vw;
     }
 }   
+.bg-none{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
